k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afi-api
  namespace: afi
  labels:
    app: afi-api
spec:
  selector:
    app: afi-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
